--- a/_posts/2019-02-24-welcome.md
+++ b/_posts/2019-02-24-welcome.md
@@ -6,23 +6,15 @@ author: Gernene
 categories: blog
 permalink: /:categories/:title
 img: blog/2019-02-24-welcome.png
-desc: A brief introduction to The Tangerine Peel and what inspired me to pursue computer science and design.
+desc: Greetings! I'd like to introduce myself and The Tangerine Peel.
 ---
 
-I opened my first blog in elementary school. I liked pink a little too much. But more importantly, I was a kind of obsessed with Animal Jam. I was so obsessed that I started maintaining an online list of all the stuffed animals you could collect within the game.
+Hi everyone!
 
-The result? A pink flower WordPress Animal Jam blog featuring baddly cropped screenshots. <span class="tiny">I can see you cringing. O.o</span>
+My name is Gernene. I'm starting this blog, The Tangerine Peel, to explore design and technical ideas while providing support and resources for creators.
 
-It's funny to think how much and, at the same time, how little has changed since. I don't usually run around a fantasy jungle pretending to be a seal anymore. But apparently, running around a fantasy jungle pretending to be a seal was what made me who I am today.
+The name "Tangerine Peel" is both a play on my name (Gernene Tan) and a reference to analysis and deeper understanding (peeling away the orange skin).
 
-*Wait, what?*
+Throughout my development as a programmer and designer, I've learned many skills/tricks that I sometimes wish I'd picked up on sooner. Much of the guidance I found easily available catered to individuals who were usually more experienced and specialized.
 
-Let me explain.
-
-Playing the games made by others was what motivated me to create my own. After poking around gaming forums, I stumbled across the open-source script that would help me build my very first website - a text-based virtual pet game. To say I was terrible at first would be an understatement. However, my lack of experience forced me to grow.
-
-As I continued to learn throughout my years at school, I became more certain of what I enjoyed and was good at: art, writing, and programming. I built numerous websites, tacky meta fan games, and attempted rewriting the same novel at least... three times?
-
-Not all my hobbies, ideas, or pursuits seemed related or even relavant at first. However, I began to realize that sometimes, it was the little spontaneous adventures that really made a difference.
-
-As of late, there have been numerous topics concerning digital design/development that have piqued my interest - and when I have interest, I write. I might not always know what to discuss or how to do so, but expressing my ideas in writing has always helped clear my mind. If my first pink flower fan game blog helped bring me here today, we shall see where this one leads me tomorrow.
+My writing aims to examine the worlds of art, design, and technology through the curious eyes of a younger, less certain individual. Join me on my personal journey as we learn and grow together.
